# estruturasdados_c

./: CMakeLists.txt  README.md  main.c
deque/: dequeestrutura.h  dequefuncoes.h
fila/: filaestrutura.h  filafuncoes.h
filadinamica/: filadinamicaestrutura.h  filadinamicafuncoes.h
listaligada/: listaligadaestrutura.h  listaligadafuncoes.h
listaligadacircular/: listaligadacircularestrutura.h  listaligadacircularfuncoes.h
listaligadadinamica/: listaligadadinamicaestrutura.h  listaligadadinamicafuncoes.h
listasequencial/: listasequencialestrutura.h  listasequencialfuncoes.h
pilhadinamica/: pilhadinamicaestrutura.h  pilhadinamicafuncoes.h
pilhaestatica/: pilhaestaticaestrutura.h  pilhaestaticafuncoes.h
